feat: auth checkout RLS, RegisterPage, AccessDeniedPage, checkout.service

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 VITE_APP_NAME=LOCAGAME
 VITE_APP_URL=https://www.locagame.fr
 
+# Demo Mode (set to 'true' only in development)
+# WARNING: Never enable in production - exposes demo credentials
+VITE_ENABLE_DEMO_MODE=false
+
 # Optional: Analytics, Payment, etc.
 # VITE_GOOGLE_ANALYTICS_ID=
 # VITE_STRIPE_PUBLIC_KEY=
